TS-5076: Test and set the in_enabled_list by atomic function

(cherry picked from commit f84b4333d2743a8275f4974e32c733e989968a67)